--- a/react-frontend/src/pages/Faq.css
+++ b/react-frontend/src/pages/Faq.css
@@ -1,12 +1,37 @@
-.faq-container {
-    padding: 20px;
-    max-width: 800px;
-    margin: auto;
+.Txt-Faq{
+    margin-top: 75px;
+    text-align: center;
+    height: 100vh;
+    background-color: #f0f2f5;
     font-family: Arial, sans-serif;
+}
+.ajuda-container {
+    font-family: Arial, sans-serif;
+    margin-top: 60px;
+    padding: 20px;
+    background-color: #f0f2f5;
+    min-height: 100vh;
+}
+
+.faq-container {
+    max-width: 800px;
+    margin: 40px auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+    text-align: left;
+}
+
+.faq-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
 }
 
 .faq-item {
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #ccc;
     padding: 10px 0;
 }
 
@@ -20,11 +45,12 @@
     cursor: pointer;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: #333;
 }
 
 .faq-pergunta:hover {
-    color: #007BFF;
+    color: #006400;
 }
 
 .faq-resposta {
