--- a/react-frontend/src/pages/Eventos.css
+++ b/react-frontend/src/pages/Eventos.css
@@ -107,6 +107,38 @@ h2, h3 {
   min-height: 190px; /* ou o equivalente a 2 linhas de cards se quiser altura fixa */
 }
 
+.grid-container .item {
+  background: #fff; /* mais clean */
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  padding: 20px;
+  min-height: 120px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.grid-container .item:hover {
+  box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+}
+
+.evento-titulo {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin-bottom: 12px;
+  color: #222;
+  line-height: 1.2;
+}
+
+.evento-data {
+  font-size: 0.95rem;
+  color: #666;
+  font-style: italic;
+  letter-spacing: 0.5px;
+}
+
 
 .topic ul {
    list-style: none;
@@ -273,3 +305,72 @@ h2, h3 {
    from { opacity: 0; transform: translateY(-10px); }
    to { opacity: 1; transform: translateY(0); }
 }
+
+.modal-overlay-detalhe-evento {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.modal {
+  background-color: #ffffff;
+  padding: 24px 32px;
+  border-radius: 12px;
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+  max-width: 480px;
+  width: 90%;
+  text-align: left;
+  position: relative;
+  animation: fadeInUp 0.3s ease;
+}
+
+.modal h3 {
+  font-size: 22px;
+  margin-bottom: 12px;
+  color: #2c3e50;
+}
+
+.modal h4 {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: #34495e;
+}
+
+.modal p {
+  font-size: 14px;
+  color: #555;
+  margin: 6px 0;
+}
+
+
+.modal button {
+  background-color: #030d031c;
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 6px;
+  margin-top: 18px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: background-color 0.3s;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
