--- a/react-frontend/src/pages/Faq.css
+++ b/react-frontend/src/pages/Faq.css
@@ -8,10 +8,11 @@
 }
 
 .faq-container {
+    text-align: center;
     max-width: 900px;
     margin: 40px auto;
     padding: 30px;
-    background-color: #f7f7f7; /* cor mais neutra como no protótipo */
+    background-color: #ffffff; /* cor mais neutra como no protótipo */
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
