--- a/react-frontend/src/pages/Faq.css
+++ b/react-frontend/src/pages/Faq.css
@@ -11,7 +11,7 @@
     max-width: 900px;
     margin: 40px auto;
     padding: 30px;
-    background-color: #f7f7f7; /* cor mais neutra como no protótipo */
+    background-color: #A8D5BA; /* cor mais neutra como no protótipo */
     border-radius: 8px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
@@ -25,7 +25,7 @@
 }
 
 .faq-item {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #696969;
     padding: 16px 0;
 }
 
