--- a/react-frontend/src/pages/Foruns.css
+++ b/react-frontend/src/pages/Foruns.css
@@ -1,3 +1,20 @@
+.top-bar {
+    background-color: #A8D5BA;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* <--- centraliza horizontalmente */
+    padding: 0 24px;
+    font-size: 11px;
+    font-weight: 500;
+    color: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
 .forum-page {
   display: flex;
   height: 100vh;
