--- a/react-frontend/src/pages/Foruns.css
+++ b/react-frontend/src/pages/Foruns.css
@@ -16,7 +16,7 @@
   }
 .forum-empty-content {
   flex: 1;
-  background-color: #f4f4f4;
+  background-color: #A8D5BA;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -32,6 +32,8 @@
   font-weight: bold;
   color: #000;
   text-decoration: underline;
+  font-size: 1rem;
+
 }
 .forum-page {
   display: flex;
@@ -79,7 +81,7 @@
   flex: 1;
   padding: 1rem;
   font-family: sans-serif;
-  background-color: #f4f4f4;
+  background-color: white;
   min-height: 100vh;
 }
 
@@ -142,6 +144,7 @@
 .forum-card {
   display: flex;
   align-items: flex-start;
+  justify-content: space-between;
   background: white;
   padding: 1rem;
   border-radius: 8px;
@@ -170,3 +173,18 @@
   margin-left: 1rem;
   text-align: right;
 }
+.main-btn{
+  text-align: center;
+  margin-top: 1rem;
+  padding: 12px 24px;
+  font-size: 1.1rem;
+  background-color: #2E7D32;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}    
+
